# MultibandSC

./: CMakeLists.txt  README.md
.github/workflows/: macosx.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
